--- a/devtools/storybook/manager-head.html
+++ b/devtools/storybook/manager-head.html
@@ -2,15 +2,15 @@
   name="description"
   content="A component and utility library to speed up app development"
 />
-<link rel="shortcut icon" href="/storybook.ico" />
-<link rel="icon" type="image/png" href="/storybook.png" sizes="192x192" />
+<link rel="shortcut icon" href="/images/storybook.ico" />
+<link rel="icon" type="image/png" href="/images/storybook.png" sizes="192x192" />
 <link rel="manifest" href="/manifest.json" />
 <meta
   name="viewport"
   content="width=device-width,initial-scale=1,shrink-to-fit=no,user-scalable=0"
 />
 <meta name="theme-color" content="#0A1930" />
-<link rel="apple-touch-icon" href="/storybook.png" />
+<link rel="apple-touch-icon" href="/images/storybook.png" />
 
 <!-- Facebook -->
 <meta property="og:url" content="http://useweb.dev" />
