--- a/devtools/storybook/preview-head.html
+++ b/devtools/storybook/preview-head.html
@@ -1,1 +1,3 @@
 <link rel="stylesheet" href="storybook.css" />
+<link rel="shortcut icon" href="/images/storybook.ico" />
+<link rel="icon" type="image/png" href="/images/storybook.png" sizes="192x192" />
