back to useweb.vercel.dev

--- a/devtools/storybook/manager-head.html
+++ b/devtools/storybook/manager-head.html
@@ -13,9 +13,9 @@
 <link rel="apple-touch-icon" href="/images/storybook.png" />
 
 <!-- Facebook -->
-<meta property="og:url" content="http://useweb.vercel.app" />
+<meta property="og:url" content="http://useweb.vercel.dev" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="useweb.vercel.app" />
+<meta property="og:title" content="useweb.vercel.dev" />
 <meta
   property="og:description"
   content="A component and utility library to speed up app development"
