--- a/devtools/storybook/storybookBuild/index.html
+++ b/devtools/storybook/storybookBuild/index.html
@@ -64,9 +64,9 @@
     />
     <meta name="theme-color" content="#0A1930" />
     <link rel="apple-touch-icon" href="/images/storybook.png" />
-    <meta property="og:url" content="http://useweb.vercel.dev" />
+    <meta property="og:url" content="http://useweb.dev" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="useweb.vercel.dev" />
+    <meta property="og:title" content="useweb.dev" />
     <meta
       property="og:description"
       content="A component and utility library to speed up app development"
